--- a/index.html
+++ b/index.html
@@ -1,167 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personas - perfiles</title>
-  <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
-  <header class="header">
-    <div class="wrapper">
-      <div class="header__container">
-        <img src="./asset/logo.png" alt="logo">
-        <div class="menu">
-          <ul>
-            <li><a href="#" class="buttom">Batchs</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </header>
-  <main class="main">
-    <div class="wrapper">
-      <div class="main__container">
-        <div class="card">
-          <div class="card__userdata">
-            <img src="./asset/user.png" alt="foto">
-            <div class="data">
-              <h2>Juan Cotera</h2>
-              <span>Estudiante</span>
-            </div>
-          </div>
-          <div class="card__hobbie">
-            <h3>Hobbies</h3>
-            <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti eius labore soluta sit et earum suscipit.</p>
-          </div>
-          <div class="card__skills">
-            <span>Skills:</span>
-            <ul class="">
-              <li class="skill">JS</li>
-              <li class="skill">Python</li>
-              <li class="skill">Java</li>
-              <li class="skill">Dart</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__userdata">
-            <img src="./asset/user.png" alt="foto">
-            <div class="data">
-              <h2>Juan Cotera</h2>
-              <span>Estudiante</span>
-            </div>
-          </div>
-          <div class="card__hobbie">
-            <h3>Hobbies</h3>
-            <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti
-              eius labore soluta sit et earum suscipit.</p>
-          </div>
-          <div class="card__skills">
-            <span>Skills:</span>
-            <ul class="">
-              <li class="skill">JS</li>
-              <li class="skill">Python</li>
-              <li class="skill">Java</li>
-              <li class="skill">Dart</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__userdata">
-            <img src="./asset/user.png" alt="foto">
-            <div class="data">
-              <h2>Juan Cotera</h2>
-              <span>Estudiante</span>
-            </div>
-          </div>
-          <div class="card__hobbie">
-            <h3>Hobbies</h3>
-            <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti
-              eius labore soluta sit et earum suscipit.</p>
-          </div>
-          <div class="card__skills">
-            <span>Skills:</span>
-            <ul class="">
-              <li class="skill">JS</li>
-              <li class="skill">Python</li>
-              <li class="skill">Java</li>
-              <li class="skill">Dart</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__userdata">
-            <img src="./asset/user.png" alt="foto">
-            <div class="data">
-              <h2>Juan Cotera</h2>
-              <span>Estudiante</span>
-            </div>
-          </div>
-          <div class="card__hobbie">
-            <h3>Hobbies</h3>
-            <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti
-              eius labore soluta sit et earum suscipit.</p>
-          </div>
-          <div class="card__skills">
-            <span>Skills:</span>
-            <ul class="">
-              <li class="skill">JS</li>
-              <li class="skill">Python</li>
-              <li class="skill">Java</li>
-              <li class="skill">Dart</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__userdata">
-            <img src="./asset/user.png" alt="foto">
-            <div class="data">
-              <h2>Juan Cotera</h2>
-              <span>Estudiante</span>
-            </div>
-          </div>
-          <div class="card__hobbie">
-            <h3>Hobbies</h3>
-            <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti
-              eius labore soluta sit et earum suscipit.</p>
-          </div>
-          <div class="card__skills">
-            <span>Skills:</span>
-            <ul class="">
-              <li class="skill">JS</li>
-              <li class="skill">Python</li>
-              <li class="skill">Java</li>
-              <li class="skill">Dart</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card__userdata">
-            <img src="./asset/user.png" alt="foto">
-            <div class="data">
-              <h2>Juan Cotera</h2>
-              <span>Estudiante</span>
-            </div>
-          </div>
-          <div class="card__hobbie">
-            <h3>Hobbies</h3>
-            <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti
-              eius labore soluta sit et earum suscipit.</p>
-          </div>
-          <div class="card__skills">
-            <span>Skills:</span>
-            <ul class="">
-              <li class="skill">JS</li>
-              <li class="skill">Python</li>
-              <li class="skill">Java</li>
-              <li class="skill">Dart</li>
-            </ul>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personas - perfiles</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="wrapper">
+        <div class="header__container">
+          <img class="logo" src="./asset/logo.png" alt="logo">
+          <div class="menu">
+            <select name="select" id="select__bacth" class="buttom">
+              <option value="all">Todo</option>
+              <option value="batch1">batch1</option>
+              <option value="batch2">batch2</option>
+              <option value="batch3">batch3</option>
+            </select>
           </div>
         </div>
       </div>
-    </div>
-  </main>
-</body>
+    </header>
+    <main class="main">
+      <div class="wrapper">
+        <div class="main__container" id="main__container">
+          <!-- <div class="card">
+            <div class="card__userdata">
+              <img src="./asset/user.png" alt="foto">
+              <div class="data">
+                <h2>Juan Cotera</h2>
+                <span>Estudiante</span>
+              </div>
+            </div>
+            <div class="card__hobbie">
+              <h3>Hobbies</h3>
+              <p class="ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas quisquam debitis corrupti
+                eius labore soluta sit et earum suscipit.</p>
+            </div>
+            <div class="card__skills">
+              <span>Skills:</span>
+              <ul class="">
+                <li class="skill">JS</li>
+                <li class="skill">Python</li>
+                <li class="skill">Java</li>
+                <li class="skill">Dart</li>
+              </ul>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </main>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
