--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="card__userdata">
               <img src="./asset/user.png" alt="foto">
               <div class="data">
-                <h2>Juan Cotera</h2>
+                <h2>Juan</h2>
                 <span>Estudiante</span>
               </div>
             </div>
@@ -41,12 +41,7 @@
             </div>
             <div class="card__skills">
               <span>Skills:</span>
-              <ul class="">
-                <li class="skill">JS</li>
-                <li class="skill">Python</li>
-                <li class="skill">Java</li>
-                <li class="skill">Dart</li>
-              </ul>
+              <p class="ellipsis">JS, Python, Java, Dart</p>
             </div>
           </div> -->
         </div>
